:bug: Fix des bugs rencontrés dans le front
